# MarketingAnalyticsDashboard

./: .gitignore  README.md  README.md.backup  STEFAN_DEMO_GUIDE.md  TESTING_GUIDE.md  demo.md  note.md  notes.md  package.json  pnpm-lock.yaml  test_export.py  test_export_complete.py  test_export_simple.html
apps/api/: Dockerfile  __init__.py  auth.py  auth_utils.py  config.py  database.py  main.py  mmm_mock_data.py  mmm_utils.py  models.py  package.json  pyproject.toml  pytest.ini  reset_db.py  schemas.py  seed.py  test_meridian_load.py  test_real_mmm.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/api/v1/: __init__.py  auth.py  export.py  mmm.py  users.py
apps/api/app/core/: config.py  constants.py  database.py  logging.py  security.py
apps/api/app/models/: __init__.py  base.py  campaign.py  mmm.py  user.py
apps/api/app/schemas/: __init__.py  auth.py  campaign.py  mmm.py  user.py
apps/api/app/services/: __init__.py  auth_service.py  interfaces.py  mmm_curve_generator.py  mmm_data_processor.py  mmm_model_loader.py  mmm_service.py  user_service.py
apps/api/app/services/mmm/: __init__.py  mmm_curve_generator.py  mmm_data_processor.py  mmm_fallback_model.py  mmm_model_loader.py
apps/api/app/utils/mmm/: __init__.py  mock_data.py
apps/api/data/: README.md
apps/api/routes/: auth.py  mmm.py
apps/api/scripts/: inspect_model.py  reset_db.py  seed.py  shutdown.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: __init__.py  protocol_fixtures.py
apps/api/tests/integration/: test_auth_endpoints.py  test_enhanced_mmm_endpoints.py  test_mmm_endpoints.py
apps/api/tests/mocks/: __init__.py  mock_auth_service.py  mock_mmm_service.py  mock_user_service.py
apps/api/tests/protocol_tests/: __init__.py  test_protocol_power.py
apps/api/tests/unit/: test_auth_utils.py  test_mmm_caching.py  test_mmm_model_loading.py  test_mmm_service.py  test_real_data_features.py  test_response_curves_validation.py
apps/web/: Dockerfile  package.json  tailwind.config.ts
apps/web/app/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: auth-provider.tsx  contribution-charts.tsx  providers.tsx
apps/web/hooks/: use-mmm-data.ts
apps/web/lib/: auth-context.tsx  auth.ts  export.ts  format-channel.ts  meridian-data.ts
imgs/: DataFlow.excalidraw  MMMDataProcessor.excalidraw  TestResponseCurvesValidation.excalidraw
scripts/: shutdown.js
(+10 files in other folders)
