[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "email-validator>=2.2.0",
    # Database
    "sqlalchemy>=2.0.43",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.16.5",
    "greenlet>=3.1.1",
    # Authentication
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.19",
    # Data processing (for MMM model)
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    # Development
    "python-dotenv>=1.0.1",
]
